v0.2.0    Thu, 02 Nov 2017 14:51:46 +0900
  - Dockerize

v0.1.3    Sat, 17 Jun 2017 15:48:23 +0900
  - blob 의 변형을 예방하기 위해 image 를 hex string 으로 변환해서 insert (#6)

v0.1.2    Tue, 06 Dec 2016 18:56:24 +0900
  - 썸네일을 가로/세로비에 맞춰서 리사이징

v0.1.1    Fri, 29 Jul 2016 17:58:53 +0900
  - 별을 클릭해서 rating 을 부여하도록 함 (#4)

v0.1.0    Fri, 29 Jul 2016 13:28:15 +0900
  - 하나의 key 에 여러장의 사진을 업로드할 수 있도록 함 (#4)

v0.0.1    Tue, 21 Jun 2016 17:00:12 +0900
  - Initial release