@@ -1,3 +1,5 @@
+  - Using travis-ci to build docker image
+
 v0.2.0    Thu, 02 Nov 2017 14:51:46 +0900
   - Dockerize
 
